--- a/style.css
+++ b/style.css
@@ -10,11 +10,15 @@
     font-family: Roboto;
     src: url("\Template\Roboto"); 
    }
-
+body {
+    background: url('images/intro.jpg') 0 0/100% auto no-repeat local;
+    -webkit-filter: brightness(100%);
+}
 h1 {
     font-family: MotserratBold, Arial, Helvetica, sans-serif;
+    font-size: 52px;
     color:white;
-    width: 300px;
+    width: 500px;
     margin: (50%-200px);
     margin-top: auto;
     text-align: center;
@@ -22,53 +26,54 @@ h1 {
 
 h3 {
     font-family: Roboto, Arial, Helvetica, sans-serif;
-    width: 350px;
+    font-size: 24px;
+    width: 450px;
     text-align: center;
+    color: white;
    } 
 
-.container{
+.main-page__box {
     display: flex;
     justify-content: center;
     align-content: center;
 }   
-.intro {
+.main-page {
     display: flex;
     flex-direction: column;
     margin-top: 10%;
     width: 100%;
     height: 100vh;
-    background-image: url(../Images/Intro.jpg) no-repeat center;
-    background-size: cover;
-    -webkit-background-size: cover;
-    background-color: rgb(208, 182, 135);
     
-    }
+    
+    
+   }
 
 header {
     display: flex;
     justify-content: space-between;
     padding: 5px;
+    
 }
 
-.headLeft {
+.headear__box1 {
     width: 60%;
     height: 100px;
     margin: 5px;
 }
 
-.headRight{
+.headear__box2 {
     width: 40%;
     margin: 5px;
 }
 
-.headLeft > div {
+.headear__box1 > div {
     width: 250px;
     height: 90px;
     margin: 5px;
     margin-left: 20%;
 }
 
-.headRight > div {
+.headear__box2 > div {
     display: flex;
     width: 250px;
     height: 90px;
@@ -79,25 +84,53 @@ header {
 
 }
 
-.headRight > div > div{
+.headear-Log1 {
     display: flex;
     width: 100px;
     height: 50px; 
-    align-items: center; 
+    align-items: center;
+    text-align: right;
+    justify-content: end; 
 }
 
-.headRight > div > div > div{
+.headear-Log2 {
+    display: flex;
+    width: 100px;
+    height: 50px; 
+    align-items: center;
+    text-align: right;
+    justify-content: center; 
+}
+
+.headear-Sign{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 20px;
     width: 80px;
     height: 30px;
+    border: white solid 1px;
     
 }
 
-.button {
+.main-page__button {
+    display: table-cell;
+    vertical-align: middle;
     font-family: MotserratBold, Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    color: white;
     border-radius: 19px;
     width: 226px;
     height: 38px;
     text-align: center;
+    background-color: #ff4e50;
+    }
 
-}
+.headear__logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: MotserratBold, Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    color: white;
+    }
