--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
     border: red solid 1px;
+    max-width: 1440px;
 }
 
 @font-face {
@@ -10,10 +11,30 @@
     font-family: Roboto;
     src: url("\Template\Roboto"); 
    }
-body {
-    background: url('images/intro.jpg') 0 0/100% auto no-repeat local;
-    -webkit-filter: brightness(100%);
+header {
+    /* background: url('images/intro.jpg') 0 0/100% auto no-repeat local; */
+    
+    max-height: 700px;
+    
+    
+
 }
+.background {
+    position: absolute;
+    background-image: url('images/intro.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    background-attachment: local;
+    z-index: -10;
+    filter: url('images/intro.jpg') brightness(70%);
+    width: 100%;
+    height: 100%;
+    max-height: 700px;
+
+}
+
+
 h1 {
     font-family: MotserratBold, Arial, Helvetica, sans-serif;
     font-size: 52px;
@@ -31,24 +52,24 @@ h3 {
     text-align: center;
     color: white;
    } 
-
-.main-page__box {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-}   
 .main-page {
     display: flex;
     flex-direction: column;
     margin-top: 10%;
     width: 100%;
-    height: 100vh;
-    
-    
+    height: 700px;  
     
    }
 
-header {
+.main-page__box {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    
+}   
+
+
+.head {
     display: flex;
     justify-content: space-between;
     padding: 5px;
@@ -134,3 +155,303 @@ header {
     font-size: 20px;
     color: white;
     }
+
+.about {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 60px;
+
+}
+
+.about__title {
+    font-family: MotserratBold, Arial, Helvetica, sans-serif;
+    font-size: 22px;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 25px;
+    }
+.about_container {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 940px;
+    margin-top: 10px;
+
+}
+
+.about_box {
+    width: 300px;
+    height: 400px;
+    margin: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: flex-start;
+   
+}    
+.about_box_img1 { 
+    
+    background-image: url('images/about_box1.jpg');
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    background-attachment: local;
+    filter: brightness(0.5);
+
+}
+
+ 
+.about_box_step_btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: MotserratBold, Arial, Helvetica, sans-serif;
+    font-size: 10px;
+    color: white;
+    border-radius: 10px;
+    width: 70px;
+    height: 20px;
+    margin: 5px;   
+    background-color: #ff4e50;
+}
+
+.about_box__title {
+    font-family: MotserratBold, Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    color: white;
+    margin: 5px; 
+}
+
+.about_box_text {
+    font-family: Roboto, Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    color: white;
+    margin: 5px; 
+
+}
+
+
+
+.about_box_img1 {
+    position: absolute;
+    z-index: -10;
+    width: 300px;
+    height: 400px;
+    margin: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: flex-start;
+    background-image: url('images/about_box1.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    background-attachment: local;
+    filter: brightness(0.5);
+}
+.about_box_img2 {
+    position: absolute;
+    z-index: -10;
+    width: 300px;
+    height: 400px;
+    margin: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: flex-start;
+    background-image: url('images/about_box2.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    background-attachment: local;
+    filter: brightness(0.5);
+}
+
+.about_box_img3 {
+    position: absolute;
+    z-index: -10;
+    width: 300px;
+    height: 400px;
+    margin: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: flex-start;
+    background-image: url('images/about_box3.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    background-attachment: local;
+    filter: brightness(0.5);
+}
+
+.partners {
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+    margin-top: 25px;
+}
+
+.partner_title {
+    text-align: center;
+    font-family: MotserratBold, Arial, Helvetica, sans-serif;
+    font-size: 22px;
+    color: #333333;
+} 
+
+.parthner_container {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 940px;
+    margin-top: 10px;
+
+}
+
+.partner_box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 220px;
+    height: 205px;
+    margin: 5px;
+}
+
+.partner_box_img1 {
+    border-radius: 50%;
+    z-index: -10;
+    width: 120px;
+    height: 120px;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: flex-end;
+    background-image: url('images/partner1.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    background-attachment: local;
+}
+
+.partner_box_img2 {
+    border-radius: 50%;
+    z-index: -10;
+    width: 120px;
+    height: 120px;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: flex-end;
+    background-image: url('images/partner2.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    background-attachment: local;
+}
+
+.partner_box_img3 {
+    border-radius: 50%;
+    z-index: -10;
+    width: 120px;
+    height: 120px;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: flex-end;
+    background-image: url('images/partner3.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    background-attachment: local;
+}
+
+.partner_box_img4 {
+    border-radius: 50%;
+    z-index: -10;
+    width: 120px;
+    height: 120px;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: flex-end;
+    background-image: url('images/partner4.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    background-attachment: local;
+}
+
+.partner_box_img_ic1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    z-index: -10;
+    width: 30px;
+    height: 30px;
+    background-color: #ff4e50;
+}
+.partner_box_img_ic2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    z-index: -10;
+    width: 30px;
+    height: 30px;
+    background-color: #1cd7ad;
+}
+
+.partner_box_img_ic3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    z-index: -10;
+    width: 30px;
+    height: 30px;
+    background-color: #ffa507;
+}
+
+.partner_box_img_ic4 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    z-index: -10;
+    width: 30px;
+    height: 30px;
+    background-color: #4e73db;
+}
+
+
+.partner_icon {
+    
+    z-index: 1;
+    width: 25px;
+    height: 25px;
+    
+   
+
+}
+
+.partner_name {
+    font-family: MotserratBold, sans-serif;
+    font-size: 14px;
+    color: #333333;
+    margin-top: 5px;
+    }
+
+.parner_text {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    color: #333333;
+    margin-top: 5px;
+}    
