--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-  border: blue solid 1px;
+  /* border: blue solid 1px; */
   /* max-width: 1440px; */
 }
 
@@ -54,9 +54,9 @@ h3 {
 }
 
 h6 {
-    
-    font-size: 14px;
-    
+  font-family: MotserratBold, sans-serif;  
+  font-size: 14px;
+  margin: 0px;  
     
     
     
@@ -69,17 +69,17 @@ h6 {
   padding: 5px;
 }
 
-.headear_box1 {
+.headear-box1 {
   width: 60%;
   height: 100px;
   margin: 5px;
 }
 
-.headear_box2 {
+.headear-box2 {
   width: 40%;
 }
 
-.headear_box3 {
+.headear-box3 {
   display: flex;
   max-width: 170px;
   height: 60px;
@@ -99,7 +99,7 @@ h6 {
   margin-left: 220px;
 }
 
-.headear__Log1 {
+.headear__log {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -108,7 +108,7 @@ h6 {
   padding-top: 5px;
 }
 
-.headear_Log2 {
+.headear-box4 {
   display: flex;
 
   align-items: center;
@@ -116,7 +116,7 @@ h6 {
   justify-content: center;
 }
 
-.headear__Sign {
+.headear__sign {
   color: white;
   display: flex;
   align-items: center;
@@ -162,7 +162,7 @@ h6 {
   margin-top: 35px;
 }
 
-.about_container {
+.about-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -170,7 +170,7 @@ h6 {
   margin-top: 10px;
 }
 
-.about_box {
+.about-box {
   width: 300px;
   height: 400px;
 
@@ -180,7 +180,7 @@ h6 {
   align-items: flex-start;
 }
 
-.about_box_step_btn {
+.about-box__btnStep {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -194,21 +194,21 @@ h6 {
   background-color: #ff4e50;
 }
 
-.about_box__title {
+.about-box__title {
   font-family: MotserratBold, sans-serif;
   font-size: 24px;
   color: white;
   margin: 5px;
 }
 
-.about_box_text {
+.about-box__text {
   font-family: Roboto, sans-serif;
   font-size: 14px;
   color: white;
   margin: 5px;
 }
 
-.about_box_img1 {
+.about-box__img1 {
   position: absolute;
   z-index: -10;
   width: 300px;
@@ -224,7 +224,7 @@ h6 {
   background-attachment: local;
   filter: brightness(0.5);
 }
-.about_box_img2 {
+.about-box__img2 {
   position: absolute;
   z-index: -10;
   width: 300px;
@@ -241,7 +241,7 @@ h6 {
   filter: brightness(0.5);
 }
 
-.about_box_img3 {
+.about-box__img3 {
   position: absolute;
   z-index: -10;
   width: 300px;
@@ -277,7 +277,7 @@ h6 {
   margin-bottom: 20px;
 }
 
-.parthner_container {
+.parthner-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -285,7 +285,7 @@ h6 {
   margin-top: 5px;
 }
 
-.partner_box {
+.partner-box {
   display: flex;
   flex-direction: column;
   justify-content:center ;
@@ -295,7 +295,7 @@ h6 {
   margin: 5px;
 }
 
-.partner_box_img1 {
+.partner-box__img1 {
   border-radius: 50%;
   z-index: -10;
   width: 120px;
@@ -312,7 +312,7 @@ h6 {
   background-attachment: local;
 }
 
-.partner_box_img2 {
+.partner-box__img2 {
   border-radius: 50%;
   z-index: -10;
   width: 120px;
@@ -329,7 +329,7 @@ h6 {
   background-attachment: local;
 }
 
-.partner_box_img3 {
+.partner-box__img3 {
   border-radius: 50%;
   z-index: -10;
   min-width: 120px;
@@ -346,7 +346,7 @@ h6 {
   background-attachment: local;
 }
 
-.partner_box_img4 {
+.partner-box__img4 {
   border-radius: 50%;
   z-index: -10;
   width: 120px;
@@ -363,7 +363,7 @@ h6 {
   background-attachment: local;
 }
 
-.partner_box_img_ic1 {
+.partner-box__img-ic1 {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -373,7 +373,7 @@ h6 {
   height: 30px;
   background-color: #ff4e50;
 }
-.partner_box_img_ic2 {
+.partner-box__img-ic2 {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -384,7 +384,7 @@ h6 {
   background-color: #1cd7ad;
 }
 
-.partner_box_img_ic3 {
+.partner-box__img-ic3 {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -395,7 +395,7 @@ h6 {
   background-color: #ffa507;
 }
 
-.partner_box_img_ic4 {
+.partner-box__img-ic4 {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -406,20 +406,20 @@ h6 {
   background-color: #4e73db;
 }
 
-.partner_icon {
+.partner__icon {
   z-index: 1;
   width: 25px;
   height: 25px;
 }
 
-.partner_name {
+.partner__name {
   font-family: MotserratBold, sans-serif;
   font-size: 14px;
   color: #333333;
   margin-top: 5px;
 }
 
-.parner_text {
+.parner__text {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Arial,
     Helvetica, sans-serif;
@@ -428,7 +428,7 @@ h6 {
   margin-top: 5px;
 }
 
-.partner_btn {
+.partner__btn {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -450,7 +450,7 @@ h6 {
   margin-top: 35px;
 }
 
-.ideas_title {
+.ideas__title {
   text-align: center;
   font-family: MotserratBold, sans-serif;
   font-weight: bold;
@@ -458,7 +458,7 @@ h6 {
   color: white;
 }
 
-.ideas_grid {
+.ideas-grid {
   display: grid;
   width: 940px;
   height: 940px;
@@ -467,27 +467,27 @@ h6 {
   grid-gap: 10px;
 }
 
-.ideas_item1 {
+.ideas-item1 {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.ideas_item2 {
+.ideas-item2 {
   grid-column: 2/4;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.ideas_item3 {
+.ideas-item3 {
   grid-column: 1/3;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.ideas_item_bg1 {
+.ideas-item__bg1 {
   position: absolute;
   background-image: url("images/grid_bg_1.jpg");
   background-position: center;
@@ -498,7 +498,7 @@ h6 {
   filter: brightness(0.5);
 }
 
-.ideas_item_bg2 {
+.ideas-item__bg2 {
   position: absolute;
   background-image: url("images/grid_bg_2.jpg");
   background-position: center;
@@ -509,7 +509,7 @@ h6 {
   filter: brightness(0.5);
 }
 
-.ideas_item_bg3 {
+.ideas-item__bg3 {
   position: absolute;
   background-image: url("images/grid_bg_3.jpg");
   background-position: right;
@@ -520,7 +520,7 @@ h6 {
   filter: brightness(0.5);
 }
 
-.ideas_item_bg4 {
+.ideas-item__bg4 {
   position: absolute;
   background-image: url("images/grid_bg_4.jpg");
   background-position: right;
@@ -531,7 +531,7 @@ h6 {
   filter: brightness(0.5);
 }
 
-.ideas_item_bg5 {
+.ideas-item__bg5 {
   position: absolute;
   background-image: url("images/grid_bg_5.jpg");
   background-position: right;
@@ -542,7 +542,7 @@ h6 {
   filter: brightness(0.6);
 }
 
-.ideas_item_bg6 {
+.ideas-item__bg6 {
   position: absolute;
   background-image: url("images/grid_bg_6.jpg");
   background-position: right;
@@ -553,7 +553,7 @@ h6 {
   filter: brightness(0.6);
 }
 
-.ideas_item_bg7 {
+.ideas-item__bg7 {
   position: absolute;
   background-image: url("images/grid_bg_7.jpg");
   background-position: right;
@@ -564,22 +564,23 @@ h6 {
   filter: brightness(0.5);
 }
 
-.serchParnersBox {
+.serch-Parners-box {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   margin-top: 0px;
 }
 
 .serch {
   display: flex;
+  
   flex-direction: row;
   justify-content: center;
   align-items: center;
 }
 
-.parner_search_text {
+.parner-search__text {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Arial,
     Helvetica, sans-serif;
@@ -589,12 +590,12 @@ h6 {
   text-align: center;
 }
 
-.input_interests {
+.input-interests {
   width: 250px;
   height: 40px;
 }
 
-.searchParnersBtn {
+.search-parners__btn {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -627,7 +628,7 @@ nav {
   margin-top: 40px;
 }
 
-.nav_promo {
+.nav__promo {
   display: flex;
   justify-content: start;
   align-items: flex-start;
@@ -640,28 +641,39 @@ nav {
   font-weight: bold;
 }
 
-.nav_list {
+.nav__list {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   list-style-type: none;
   margin: 0px;
   font-size: 14px;
   font-family: MotserratBold, sans-serif;
   font-weight: bold;
   color: #333333;
+  padding: 0px;
 }
 
-.nav_list > li {
+.nav__list > li {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Arial,
     Helvetica, sans-serif;
   font-size: 14px;
   color: #cccccc;
+  font-weight: lighter;
 }
 
-.nav_logo {
+.nav__logo {
   color: #cccccc;
   text-transform: uppercase;
   font-family: MotserratBold, sans-serif;
   font-weight: bold;
+}
+
+.nav-box {
+  display: flex;
+  flex-direction: column;
+  justify-content:flex-start;
 }
 
 @media screen and (max-width: 800px) {
@@ -694,7 +706,7 @@ nav {
       font-family: MotserratBold, sans-serif;
       font-size: 16px;
       color: #333333;
-      margin: 0px;
+      
       width: 100%;
       text-align: center;
     }
@@ -705,18 +717,18 @@ nav {
       width: 100%;
     }
   
-    .headear_box1 {
+    .headear-box1 {
       width: 100%;
       height: 50px;
       margin: 0px;
       margin-top: 100px;
     }
   
-    .headear_box2 {
+    .headear-box2 {
       width: 100%;
     }
   
-    .headear_box3 {
+    .headear-box3 {
       max-width: 100%;
       height: 60px;
       margin: 0px;
@@ -734,11 +746,11 @@ nav {
       margin-left: 0px;
     }
   
-    .headear__Log1 {
+    .headear__log {
       font-size: 14px;
     }
   
-    .headear_Log2 {
+    .headear-box4 {
       font-size: 14px;
     }
   
@@ -757,7 +769,7 @@ nav {
       padding-top: 0px;
     }
   
-    .about_container {
+    .about-container {
       flex-direction: column;
       justify-content: center;
       align-items: center;
@@ -766,20 +778,20 @@ nav {
       margin: 10px;
     }
   
-    .about_box {
+    .about-box {
       height: 240px;
   
       margin-bottom: 10px;
     }
   
-    .about_box_img1 {
+    .about-box__img1 {
       height: 240px;
     }
-    .about_box_img2 {
+    .about-box__img2 {
       height: 240px;
     }
   
-    .about_box_img3 {
+    .about-box__img3 {
       height: 240px;
     }
   
@@ -792,18 +804,18 @@ nav {
       margin-bottom: 0px;
     }
   
-    .parthner_container {
+    .parthner-container {
       flex-direction: column;
   
       align-items: center;
       width: 100%;
     }
   
-    .partner_name {
+    .partner__name {
       margin-top: 10px;
     }
   
-    .partner_btn {
+    .partner__btn {
       width: 280px;
     }
   
@@ -811,7 +823,7 @@ nav {
       margin-top: 25px;
     }
   
-    .ideas_grid {
+    .ideas-grid {
       width: 100%;
   
       grid-template-columns: repeat(1, 1fr);
@@ -819,57 +831,57 @@ nav {
       grid-gap: 10px;
     }
   
-    .ideas_item2 {
+    .ideas-item2 {
       grid-column: 1/2;
     }
   
-    .ideas_item3 {
+    .ideas-item3 {
       grid-column: 1/2;
     }
   
-    .ideas_item_bg1 {
+    .ideas-item__bg1 {
       height: 100%;
       max-width: 300px;
       max-height: 120px;
     }
   
-    .ideas_item_bg2 {
+    .ideas-item__bg2 {
       height: 100%;
       max-width: 300px;
       max-height: 120px;
     }
   
-    .ideas_item_bg3 {
+    .ideas-item__bg3 {
       height: 100%;
       max-width: 300px;
       max-height: 120px;
     }
   
-    .ideas_item_bg4 {
+    .ideas-item__bg4 {
       height: 100%;
       max-width: 300px;
       max-height: 120px;
     }
   
-    .ideas_item_bg5 {
+    .ideas-item__bg5 {
       height: 100%;
       max-width: 300px;
       max-height: 120px;
     }
   
-    .ideas_item_bg6 {
+    .ideas-item__bg6 {
       height: 100%;
       max-width: 300px;
       max-height: 120px;
     }
   
-    .ideas_item_bg7 {
+    .ideas-item__bg7 {
       height: 100%;
       max-width: 300px;
       max-height: 120px;
     }
   
-    .serchParnersBox {
+    .serch-parners-box {
       justify-content: start;
   
       margin-top: 35px;
@@ -881,12 +893,12 @@ nav {
       align-items: center;
     }
   
-    .parner_search_text {
+    .parner-search_text {
       margin-top: 0px;
       margin-bottom: 0px;
     }
   
-    .searchParnersBtn {
+    .search-parners__btn {
       width: 280px;
     }
   
@@ -902,7 +914,7 @@ nav {
       margin-top: 10px;
     }
   
-    .nav_promo {
+    .nav__promo {
       justify-content: center;
       align-items: center;
   
@@ -910,18 +922,22 @@ nav {
       height: 25px;
     }
   
-    .nav_box {
+    .nav-box {
       margin: 5px;
       width: 300px;
       
       text-align: center;
     }
   
-    .nav_list {
+    .nav__list {
       display: flex;
       justify-content: center;
       align-items: center;
-      list-style-type: none;
+      
+    }
+
+    .nav__list > li {
+      margin-left: 5px;
     }
   }
   
