--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-  border: blue solid 1px;
+  /* border: blue solid 1px; */
   /* max-width: 1440px; */
 }
 
@@ -54,13 +54,9 @@ h3 {
 }
 
 h6 {
-  font-family: MotserratBold, sans-serif;  
+  font-family: MotserratBold, sans-serif;
   font-size: 14px;
-  margin: 0px;  
-    
-    
-    
-
+  margin: 0px;
 }
 
 .head {
@@ -110,7 +106,6 @@ h6 {
 
 .headear-boxSign {
   display: flex;
-
   align-items: center;
   text-align: right;
   justify-content: center;
@@ -130,7 +125,6 @@ h6 {
 .main-page {
   display: flex;
   flex-direction: column;
-
   align-items: center;
   width: 100%;
   height: 450px;
@@ -142,7 +136,6 @@ h6 {
   display: flex;
   justify-content: center;
   align-items: center;
-
   font-family: MotserratBold, sans-serif;
   font-size: 14px;
   color: white;
@@ -173,7 +166,6 @@ h6 {
 .about-box {
   width: 300px;
   height: 400px;
-
   display: flex;
   flex-direction: column;
   justify-content: end;
@@ -208,7 +200,7 @@ h6 {
   margin: 5px;
 }
 
-.about-box__img1 {
+.about-box__img {
   position: absolute;
   z-index: -10;
   width: 300px;
@@ -217,46 +209,23 @@ h6 {
   flex-direction: column;
   justify-content: end;
   align-items: flex-start;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-attachment: local;
+  filter: brightness(0.5);
+}
+
+.about-box__img_1 {
   background-image: url("images/about_box1.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 0;
-  background-attachment: local;
-  filter: brightness(0.5);
 }
-.about-box__img2 {
-  position: absolute;
-  z-index: -10;
-  width: 300px;
-  height: 400px;
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
-  align-items: flex-start;
+
+.about-box__img_2 {
   background-image: url("images/about_box2.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 0;
-  background-attachment: local;
-  filter: brightness(0.5);
 }
 
-.about-box__img3 {
-  position: absolute;
-  z-index: -10;
-  width: 300px;
-  height: 400px;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
-  align-items: flex-start;
+.about-box__img_3 {
   background-image: url("images/about_box3.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 0;
-  background-attachment: local;
-  filter: brightness(0.5);
 }
 
 .partners {
@@ -288,82 +257,45 @@ h6 {
 .partner-box {
   display: flex;
   flex-direction: column;
-  justify-content:center ;
+  justify-content: center;
   align-items: center;
   width: 220px;
   padding-top: 5px;
   margin: 5px;
 }
 
-.partner-box__img1 {
+.partner-box-img {
   border-radius: 50%;
   z-index: -10;
   width: 120px;
   height: 120px;
-
   display: flex;
   flex-direction: column;
   justify-content: end;
   align-items: flex-end;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-attachment: local;
+}
+
+.partner-box-img_1 {
   background-image: url("images/partner1.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 0;
-  background-attachment: local;
 }
 
-.partner-box__img2 {
-  border-radius: 50%;
-  z-index: -10;
-  width: 120px;
-  height: 120px;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
-  align-items: flex-end;
+.partner-box-img_2 {
   background-image: url("images/partner2.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 0;
-  background-attachment: local;
 }
 
-.partner-box__img3 {
-  border-radius: 50%;
-  z-index: -10;
-  min-width: 120px;
-  min-height: 120px;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
-  align-items: flex-end;
+.partner-box-img_3 {
   background-image: url("images/partner3.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 0;
-  background-attachment: local;
 }
 
-.partner-box__img4 {
-  border-radius: 50%;
-  z-index: -10;
-  width: 120px;
-  height: 120px;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
-  align-items: flex-end;
+.partner-box-img_4 {
   background-image: url("images/partner4.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 0;
-  background-attachment: local;
 }
 
-.partner-box__img-ic1 {
+.partner-box-img-ic {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -371,38 +303,20 @@ h6 {
   z-index: -10;
   width: 30px;
   height: 30px;
+}
+
+.partner-box-img-ic_red {
   background-color: #ff4e50;
 }
-.partner-box__img-ic2 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  z-index: -10;
-  width: 30px;
-  height: 30px;
+.partner-box-img-ic_green {
   background-color: #1cd7ad;
 }
 
-.partner-box__img-ic3 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  z-index: -10;
-  width: 30px;
-  height: 30px;
+.partner-box-img-ic_yelow {
   background-color: #ffa507;
 }
 
-.partner-box__img-ic4 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  z-index: -10;
-  width: 30px;
-  height: 30px;
+.partner-box-img-ic_blue {
   background-color: #4e73db;
 }
 
@@ -467,101 +381,58 @@ h6 {
   grid-gap: 10px;
 }
 
-.ideas-item1 {
+.ideas-item {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.ideas-item2 {
+.ideas-item_2 {
   grid-column: 2/4;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
-.ideas-item3 {
+.ideas-item_3 {
   grid-column: 1/3;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
-.ideas-item__bg1 {
+.ideas-item__bg {
   position: absolute;
+  background-position: center;
+  background-size: cover;
+  z-index: -7;
+  width: 300px;
+  height: 300px;
+  filter: brightness(0.5);
+}
+
+.ideas-item__bg_1 {
   background-image: url("images/grid_bg_1.jpg");
-  background-position: center;
-  background-size: cover;
-  z-index: -7;
-  width: 300px;
-  height: 300px;
-  filter: brightness(0.5);
 }
 
-.ideas-item__bg2 {
-  position: absolute;
+.ideas-item__bg_2 {
   background-image: url("images/grid_bg_2.jpg");
-  background-position: center;
-  background-size: cover;
-  z-index: -7;
-  width: 300px;
-  height: 300px;
-  filter: brightness(0.5);
 }
 
-.ideas-item__bg3 {
-  position: absolute;
+.ideas-item__bg_3 {
   background-image: url("images/grid_bg_3.jpg");
-  background-position: right;
-  background-size: cover;
-  z-index: -7;
-  width: 300px;
-  height: 300px;
-  filter: brightness(0.5);
 }
 
-.ideas-item__bg4 {
-  position: absolute;
+.ideas-item__bg_4 {
   background-image: url("images/grid_bg_4.jpg");
-  background-position: right;
-  background-size: cover;
-  z-index: -7;
-  width: 300px;
-  height: 300px;
-  filter: brightness(0.5);
 }
 
-.ideas-item__bg5 {
-  position: absolute;
+.ideas-item__bg_5 {
   background-image: url("images/grid_bg_5.jpg");
-  background-position: right;
-  background-size: cover;
-  z-index: -7;
   width: 620px;
-  height: 300px;
-  filter: brightness(0.6);
 }
 
-.ideas-item__bg6 {
-  position: absolute;
+.ideas-item__bg_6 {
   background-image: url("images/grid_bg_6.jpg");
-  background-position: right;
-  background-size: cover;
-  z-index: -7;
   width: 620px;
-  height: 300px;
-  filter: brightness(0.6);
 }
 
-.ideas-item__bg7 {
-  position: absolute;
+.ideas-item__bg_7 {
   background-image: url("images/grid_bg_7.jpg");
-  background-position: right;
-  background-size: cover;
-  z-index: -7;
-  width: 300px;
-  height: 300px;
-  filter: brightness(0.5);
 }
 
 .serch-Parners-box {
@@ -574,7 +445,6 @@ h6 {
 
 .serch {
   display: flex;
-  
   flex-direction: row;
   justify-content: center;
   align-items: center;
@@ -673,271 +543,264 @@ nav {
 .nav-box {
   display: flex;
   flex-direction: column;
-  justify-content:flex-start;
+  justify-content: flex-start;
 }
 
 @media screen and (max-width: 800px) {
-    .header {
-      max-height: 540px;
-    }
-    .background {
-      height: 540px;
-      max-height: 540px;
-    }
-  
-    h1 {
-      font-size: 30px;
-      width: 100%;
-      margin-top: 0px;
-      max-width: 300px;
-    }
-  
-    h3 {
-      font-size: 18px;
-  
-      width: 100%;
-      max-width: 300px;
-      margin-top: 0px;
-  
-      text-align: center;
-    }
-  
-    h6 {
-      font-family: MotserratBold, sans-serif;
-      font-size: 16px;
-      color: #333333;
-      
-      width: 100%;
-      text-align: center;
-    }
-    .head {
-      flex-direction: column-reverse;
-      justify-content: center;
-      padding: 0px;
-      width: 100%;
-    }
-  
-    .headear-boxLogo {
-      width: 100%;
-      height: 50px;
-      margin: 0px;
-      margin-top: 100px;
-    }
-  
-    .headear-boxLogin {
-      width: 100%;
-    }
-  
-    .headear-containerLogin {
-      max-width: 100%;
-      height: 60px;
-      margin: 0px;
-      margin-left: 0px;
-      justify-content: center;
-    }
-  
-    .headear__logo {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 20px;
-      padding-top: 0px;
-      margin: 0px;
-      margin-left: 0px;
-    }
-  
-    .headear__login {
-      font-size: 14px;
-    }
-  
-    .headear-boxSign {
-      font-size: 14px;
-    }
-  
-    .main-page {
-      height: 100%;
-      max-height: 320px;
-      padding-top: 0px;
-    }
-  
-    .main-page__button {
-      width: 280px;
-    }
-  
-    .about {
-      margin-top: 30px;
-      padding-top: 0px;
-    }
-  
-    .about-container {
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      margin-top: 0px;
-      margin: 10px;
-    }
-  
-    .about-box {
-      height: 240px;
-  
-      margin-bottom: 10px;
-    }
-  
-    .about-box__img1 {
-      height: 240px;
-    }
-    .about-box__img2 {
-      height: 240px;
-    }
-  
-    .about-box__img3 {
-      height: 240px;
-    }
-  
-    .partners {
-      margin-top: 5px;
-    }
-  
-    .title {
-      margin-top: 0px;
-      margin-bottom: 0px;
-    }
-  
-    .parthner-container {
-      flex-direction: column;
-  
-      align-items: center;
-      width: 100%;
-    }
-  
-    .partner__name {
-      margin-top: 10px;
-    }
-  
-    .partner__btn {
-      width: 280px;
-    }
-  
-    .ideas {
-      margin-top: 25px;
-    }
-  
-    .ideas-grid {
-      width: 100%;
-  
-      grid-template-columns: repeat(1, 1fr);
-      grid-template-rows: repeat(7, 1fr);
-      grid-gap: 10px;
-    }
-  
-    .ideas-item2 {
-      grid-column: 1/2;
-    }
-  
-    .ideas-item3 {
-      grid-column: 1/2;
-    }
-  
-    .ideas-item__bg1 {
-      height: 100%;
-      max-width: 300px;
-      max-height: 120px;
-    }
-  
-    .ideas-item__bg2 {
-      height: 100%;
-      max-width: 300px;
-      max-height: 120px;
-    }
-  
-    .ideas-item__bg3 {
-      height: 100%;
-      max-width: 300px;
-      max-height: 120px;
-    }
-  
-    .ideas-item__bg4 {
-      height: 100%;
-      max-width: 300px;
-      max-height: 120px;
-    }
-  
-    .ideas-item__bg5 {
-      height: 100%;
-      max-width: 300px;
-      max-height: 120px;
-    }
-  
-    .ideas-item__bg6 {
-      height: 100%;
-      max-width: 300px;
-      max-height: 120px;
-    }
-  
-    .ideas-item__bg7 {
-      height: 100%;
-      max-width: 300px;
-      max-height: 120px;
-    }
-  
-    .serch-parners-box {
-      justify-content: start;
-  
-      margin-top: 35px;
-    }
-  
-    .serch {
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-  
-    .parner-search_text {
-      margin-top: 0px;
-      margin-bottom: 0px;
-    }
-  
-    .search-parners__btn {
-      width: 280px;
-    }
-  
-    footer {
-      margin-top: 15px;
-    }
-  
-    nav {
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-  
-      margin-top: 10px;
-    }
-  
-    .nav__promo {
-      justify-content: center;
-      align-items: center;
-  
-      width: 100%;
-      height: 25px;
-    }
-  
-    .nav-box {
-      margin: 5px;
-      width: 300px;
-      
-      text-align: center;
-    }
-  
-    .nav__list {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      
-    }
-
-    .nav__list > li {
-      margin-left: 5px;
-    }
+  .header {
+    max-height: 540px;
   }
-  
+  .background {
+    height: 540px;
+    max-height: 540px;
+  }
+
+  h1 {
+    font-size: 30px;
+    width: 100%;
+    margin-top: 0px;
+    max-width: 300px;
+  }
+
+  h3 {
+    font-size: 18px;
+    width: 100%;
+    max-width: 300px;
+    margin-top: 0px;
+    text-align: center;
+  }
+
+  h6 {
+    font-family: MotserratBold, sans-serif;
+    font-size: 16px;
+    color: #333333;
+    width: 100%;
+    text-align: center;
+  }
+  .head {
+    flex-direction: column-reverse;
+    justify-content: center;
+    padding: 0px;
+    width: 100%;
+  }
+
+  .headear-boxLogo {
+    width: 100%;
+    height: 50px;
+    margin: 0px;
+    margin-top: 100px;
+  }
+
+  .headear-boxLogin {
+    width: 100%;
+  }
+
+  .headear-containerLogin {
+    max-width: 100%;
+    height: 60px;
+    margin: 0px;
+    margin-left: 0px;
+    justify-content: center;
+  }
+
+  .headear__logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    padding-top: 0px;
+    margin: 0px;
+    margin-left: 0px;
+  }
+
+  .headear__login {
+    font-size: 14px;
+  }
+
+  .headear-boxSign {
+    font-size: 14px;
+  }
+
+  .main-page {
+    height: 100%;
+    max-height: 320px;
+    padding-top: 0px;
+  }
+
+  .main-page__button {
+    width: 280px;
+  }
+
+  .about {
+    margin-top: 30px;
+    padding-top: 0px;
+  }
+
+  .about-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-top: 0px;
+    margin: 10px;
+  }
+
+  .about-box {
+    height: 240px;
+    margin-bottom: 10px;
+  }
+
+  .about-box__img_1 {
+    height: 240px;
+  }
+  .about-box__img_2 {
+    height: 240px;
+  }
+
+  .about-box__img_3 {
+    height: 240px;
+  }
+
+  .partners {
+    margin-top: 5px;
+  }
+
+  .title {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .parthner-container {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+  .partner__name {
+    margin-top: 10px;
+  }
+
+  .partner__btn {
+    width: 280px;
+  }
+
+  .ideas {
+    margin-top: 25px;
+  }
+
+  .ideas-grid {
+    width: 100%;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+    grid-gap: 10px;
+  }
+
+  .ideas-item_2 {
+    grid-column: 1/2;
+  }
+
+  .ideas-item_3 {
+    grid-column: 1/2;
+  }
+
+  .ideas-item__bg_1 {
+    height: 100%;
+    max-width: 300px;
+    max-height: 120px;
+  }
+
+  .ideas-item__bg_2 {
+    height: 100%;
+    max-width: 300px;
+    max-height: 120px;
+  }
+
+  .ideas-item__bg_3 {
+    height: 100%;
+    max-width: 300px;
+    max-height: 120px;
+  }
+
+  .ideas-item__bg_4 {
+    height: 100%;
+    max-width: 300px;
+    max-height: 120px;
+  }
+
+  .ideas-item__bg_5 {
+    height: 100%;
+    max-width: 300px;
+    max-height: 120px;
+  }
+
+  .ideas-item__bg_6 {
+    height: 100%;
+    max-width: 300px;
+    max-height: 120px;
+  }
+
+  .ideas-item__bg_7 {
+    height: 100%;
+    max-width: 300px;
+    max-height: 120px;
+  }
+
+  .serch-parners-box {
+    justify-content: start;
+
+    margin-top: 35px;
+  }
+
+  .serch {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .parner-search_text {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .search-parners__btn {
+    width: 280px;
+  }
+
+  footer {
+    margin-top: 15px;
+  }
+
+  nav {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: 10px;
+  }
+
+  .nav__promo {
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
+    height: 25px;
+  }
+
+  .nav-box {
+    margin: 5px;
+    width: 300px;
+
+    text-align: center;
+  }
+
+  .nav__list {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .nav__list > li {
+    margin-left: 5px;
+  }
+}
